<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pocketoverflow.signIn.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="EXTRA_USER"
            android:defaultValue="@null"
            app:argType="com.example.pocketoverflow.roomDB.User" />
    </fragment>

    <fragment
        android:id="@+id/nav_commonroom"
        android:name="com.example.pocketoverflow.signIn.ui.commonRoom.CommonRoomFragment"
        android:label="@string/common_room"
        tools:layout="@layout/fragment_commonroom" />

    <fragment
        android:id="@+id/nav_spells"
        android:name="com.example.pocketoverflow.signIn.ui.spells.SpellsFragment"
        android:label="@string/spells"
        tools:layout="@layout/fragment_spells" />
</navigation>